updated user controller
